Signed-off-by: RollandDin <daniil.latysh@yandex.ru>

--- a/views/RS.jade
+++ b/views/RS.jade
@@ -27,53 +27,12 @@ block content
            | console, Neve, API and Chandler Limited mic preamps, Neumann, Microtech Gefell and Royer microphones and a lot more!
            br
            | We’re always looking for new challenges, so please feel free to contact us!
-          hr
-          h2 Sound recording studio
-           .divPanel.page-content
-            .breadcrumbs
-              a(href='index.html') Home
-               |   /  
-               span 2-Column
-           .row-fluid
-            .span3
-              h3 Left Sidebar Content
-              p
-               | Lorem Ipsum is simply dummy text of the printing and 
-               a(href='#') typesetting industry
-               | .
-            p  Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s.
-            .row-fluid
-              .span6
-                img.img-polaroid(src='images/placeholder3.jpg', style='margin:5px 0px 15px;', alt='')
-              .span6
-                img.img-polaroid(src='images/placeholder3.jpg', style='margin:5px 0px 15px;', alt='')
-            .row-fluid
-              .span6
-                img.img-polaroid(src='images/placeholder3.jpg', style='margin:5px 0px 15px;', alt='')
-              .span6
-                img.img-polaroid(src='images/placeholder3.jpg', style='margin:5px 0px 15px;', alt='')
-            h3 Another Section
-            p
-              | Lorem Ipsum is simply dummy text of the printing and 
-              a(href='#') typesetting industry
-              | .
-            p  Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s.
-          // /End Sidebar Content
-          // Edit Main Content Area here
-          #divMain.span9
-            h1 Two Column (left-hand sidebar)
-            hr
-            p
-              | Aliquam a tellus quam. Phasellus sit amet bibendum nunc. Donec lobortis nulla diam, a laoreet nisi rhoncus vitae. Suspendisse tincidunt, nulla sed convallis consectetur, diam enim ultricies nulla, a luctus odio nisi in ligula. Aenean ornare rhoncus fermentum. Suspendisse et enim in nibh dictum blandit et id nisi. Duis mollis, libero id venenatis viverra, metus lacus placerat turpis, at semper orci odio id lectus. Proin fringilla quam porttitor est mattis, id aliquam est laoreet. Nulla congue urna nisi, eu commodo dolor aliquet eget. Donec ullamcorper diam quis porttitor convallis. Aliquam erat volutpat. Phasellus pulvinar sagittis nunc et adipiscing.
-            p
-              img.img-circle.pull-left(src='images/circle.jpg', style='margin:5px 15px 10px;', alt='')
-              | Duis facilisis tellus ante, eu sodales neque ornare vitae. Pellentesque laoreet velit diam, quis tempor est fringilla sed. Curabitur in ullamcorper lectus, et gravida mauris. Suspendisse tristique euismod metus, quis facilisis lectus cursus faucibus. Nulla sed leo sed tellus egestas mattis sed id libero. Aenean at scelerisque augue. Phasellus at sem porttitor, auctor metus pharetra, lacinia sapien.
-            p
-              | Etiam enim dui, dictum vitae lobortis quis, placerat feugiat leo. Sed commodo elit orci, non tincidunt velit suscipit in. Nulla facilisi. Praesent vel eros tristique, lobortis orci vitae, interdum quam. 
-              img.img-circle.pull-right(src='images/circle2.jpg', style='margin:10px 15px 10px;', alt='')
-              | In hac habitasse platea dictumst. Praesent lobortis iaculis ante, at laoreet est pulvinar vel. Cras vulputate tempus nulla eget venenatis. Suspendisse magna lacus, tincidunt nec pulvinar sit amet, semper quis neque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cras vehicula volutpat enim, id vehicula dolor porttitor in. Nam vehicula velit erat, eu consectetur elit luctus ut. Aliquam ac convallis enim, et venenatis dui. Maecenas et leo metus. Etiam diam ante, lacinia vitae orci vel, dignissim vestibulum tortor. Aliquam elit sapien, pellentesque eu consectetur et, tempor vitae nisl.
-            p
-              | Donec arcu nisi, euismod vitae facilisis id, pulvinar eget tortor. Nunc lobortis ultrices pellentesque. Sed sollicitudin dapibus erat a interdum. Cras massa mauris, rutrum vel nisi non, malesuada lobortis velit. Fusce eu tellus justo. Donec dictum, purus at adipiscing rhoncus, risus libero bibendum ipsum, mollis vestibulum arcu arcu eget elit. In tempor laoreet ultricies.
-              | Maecenas lacus neque, fermentum in blandit a, mollis in libero. Vivamus ornare eros quis arcu cursus, at luctus nisi accumsan.
-          // /End Main Content Area here
-        #footerInnerSeparator
+    hr
+    .container
+      .row
+        .col-md-3
+          p Column 1
+        .col-md-3
+          p Column 2
+        .col-md-3
+          p Column 3   
