--- a/views/index.jade
+++ b/views/index.jade
@@ -27,5 +27,13 @@ block content
            | console, Neve, API and Chandler Limited mic preamps, Neumann, Microtech Gefell and Royer microphones and a lot more!
            br
            | We’re always looking for new challenges, so please feel free to contact us!
-          h2 Sound recording studio
-           
+       hr
+    .container
+     h2 Sound recording studio
+      .row
+        .col-md-3
+          img.img-polaroid(src='images/slider/graphite hall.jpg', style='margin:5px 0px 15px;', height='160px', alt='')
+          p Graphite Hall
+        .col-md-3
+          img.img-polaroid(src='images/slider/green hall.jpg', style='margin:5px 0px 15px;', height='160px', alt='')
+          p Green Hall
