--- a/views/reg.jade
+++ b/views/reg.jade
@@ -1,9 +1,9 @@
 extends layout
 head
- style.
-   #butt{}
+
 body
 block content
+ .container
   h1  Регистрация 
    form(method='post', action='/reg')
     h4 Введите ваш логин:
